syntax = "proto3";

option java_package = "com.proto.audio";

message DownloadFileRequest{
    string nombre = 1;
}

message DataChunckResponse{
    bytes data = 1;
}

service AudioService{
    rpc downloadAudio (DownloadFileRequest) returns (stream DataChunckResponse);
}